--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,10 +14,12 @@
         android:layout_height="match_parent">
 
         <TextView
+
             android:layout_width="match_parent"
             android:id="@+id/tips"
             android:layout_height="wrap_content"
-            android:text="请先登录再操作！"
+            android:gravity="center"
+            android:text="Please Login First！"
             />
 
     </FrameLayout>
