--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -31,7 +31,7 @@
             android:gravity="center"
             android:layout_marginTop="4dp">
          <TextView
-             android:id="@+id/Home_username"
+             android:id="@+id/home_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -41,7 +41,7 @@
                 android:id="@+id/home_userid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/Home_username"
+                android:layout_below="@+id/home_username"
                 android:layout_marginTop="5dp"
                 android:textSize="12dp"
                 android:text="Login First"/>
