--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:id="@+id/tv_send"
+                android:id="@+id/tv_Realtime"
                 android:layout_height="?actionBarSize"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
@@ -90,7 +90,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Send"
+                    android:text="Realtime/Cloud Service"
                     android:textSize="15sp" />
 
             </LinearLayout>
